# BarkerBot

./: .gitignore  README.md  pyproject.toml
barkerbot/: bot.py  constants.py
